distraction free init & layout bugfixes

--- a/less/file.less
+++ b/less/file.less
@@ -1,18 +1,22 @@
 #file {
-    max-height:100%;
-    overflow: scroll;
+    //max-height:100%;
+    //overflow: scroll;
 
     .CodeMirror {
         max-width: 650px;
         width: 100%;
-        margin: (10px + 35px) auto 0;
+        margin: 35px auto 50px;
         //border: 1px solid lighten(gray, 40%);
         //background: white;
-        //border-width: 1px 1px 0;
-        //padding: 40px 20px;
+        padding: 40px 30px;
         height: 100%;
         position: relative;
         z-index: 100;
+
+        border:0px solid #eee8d5;
+        //border-width:0 1px 1px;
+        
+        box-shadow: 0 -15px 15px -5px #eee8d5;
 
         //line-height: 22px;
 
@@ -29,6 +33,14 @@
         //display: none;
 
         h1 {
+        }
+    }
+}
+
+.distractionFree {
+    #file {
+        .CodeMirror {
+            //box-shadow:none;
         }
     }
 }
