--- a/less/files.less
+++ b/less/files.less
@@ -1,13 +1,33 @@
 #files {
     position: fixed;
-    left: 10px;
+    top:0;
+    left: 0;
     font-size: 12px;
-    display: none;
+    margin: 35px 0 50px;
+    padding: 40px 30px;
+
+    //display: none;
+
+    #openPickerButton {
+        display: none;
+    }
+
+    h3 {
+        margin: 0 0 15px;
+    }
 
     P {
         cursor: pointer;
+        font-size: 14px;
+        margin: 0 0 10px;
         small {
             display: none;
         }
+    }
+}
+
+.distractionFree {
+    #files {
+        opacity: 0.1;
     }
 }
