--- a/less/layout.less
+++ b/less/layout.less
@@ -1,19 +1,24 @@
-html {
-  position: fixed;
-  width: 100%;
-  height: 100%;
+* {
+    -moz-box-sizing: border-box; 
+    -webkit-box-sizing: border-box; 
+    box-sizing: border-box;
 }
 
 html, body {
+    margin:0;
+    padding:0;
+}
+
+html {
     height: 100%;
     width:100%;
-    margin:0;
-
-    overflow: hidden;
+    overflow: scroll;
+    overflow-x: hidden;
 }
 
 body {
-    //background: lighten(lightyellow, 4);
+    .clearfix();
+    min-height: 100%;
 }
 
 #titlebar {
@@ -24,6 +29,7 @@ body {
     
     //background: #eee8d5;
     background: rgba(238, 232, 213, 0.8);
+    background: rgba(253, 246, 227, 0.9);
 
     z-index: 200;
     -webkit-app-region: drag;
@@ -36,6 +42,7 @@ body {
 
     &:hover {
         background: #eee8d5;
+        background: rgba(238, 232, 213, 0.8);
     }
 
     > * {
@@ -101,4 +108,10 @@ body {
         }
     }
 
+}
+
+.distractionFree {
+    #titlebar {
+        //border-bottom-width:0px;
+    }
 }
